--- a/css/homepageStyle.css
+++ b/css/homepageStyle.css
@@ -89,6 +89,7 @@ body {
     text-align: left;
 		pointer-events: none;
 		top: -5px;
+		pointer-events: none;
 }
 .centered {
 		pointer-events: none;
@@ -100,4 +101,8 @@ body {
 		width: 60%;
 		padding: 20px 20px 20px 20px;
 		margin-top: 10px
+}
+
+.centered button {
+	pointer-events: all;
 }
