--- a/css/homepageStyle.css
+++ b/css/homepageStyle.css
@@ -49,18 +49,18 @@ font-family: 'PT Sans', sans-serif;
 */
 
 /* non-reset styling */
-.feature-text {
+.featureText {
   font-family: 'Press Start 2P', cursive;
-	font-size: 24pt;
+	font-size: 26pt;
 }
 h1 {
-	font-family: 'PT Sans', sans-serif;
+	font-family: 'Press Start 2P', cursive;
 	font-size: 24pt;
 }
 body {
   font-family: 'Roboto', sans-serif;
 	color: #EEEEEE;
-	background-color: #222831;
+	background-color: #393E46;
 }
 #logo {
 	display: block;
@@ -88,8 +88,10 @@ body {
     position: relative;
     text-align: left;
 		pointer-events: none;
-		top: -5px;
-		pointer-events: none;
+		height: 100%;
+		padding-bottom: 5px;
+		text-align: center;
+		background-color: #222831;
 }
 .centered {
 		pointer-events: none;
@@ -100,9 +102,43 @@ body {
 		height: auto;
 		width: 60%;
 		padding: 20px 20px 20px 20px;
-		margin-top: 10px
+		margin-top: 10px;
+		text-align: left;
 }
 
-.centered button {
+.centered button a {
 	pointer-events: all;
+	color: #FF5722;
+}
+
+.title {
+	width: 30%;
+	display: inline;
+	float: left;
+	background-color: #393E46;
+}
+
+.titleHolder {
+	margin-top: 15px;
+	margin-left: 15px;
+	margin-bottom: 7px;
+	text-align: center;
+	min-width: 200px;
+}
+
+.feature-image img {
+	 height: 100%;
+	 width: 100%;
+}
+
+.top-nav {
+	background-color: #393E46;
+	height: auto;
+}
+
+.content {
+	background-color: #393E46;
+	width: 60%;
+	height: 100%;
+	margin-left: 20%;
 }
