--- a/css/slidingNav.scss
+++ b/css/slidingNav.scss
@@ -4,14 +4,14 @@
 $menu-items: 4;
 
 // Colours
-$background-color: #121212;
-$indicator-color: #e82d00;
+$background-color: #393E46;
+$indicator-color: #FF5722;
 
 // Transition Speed
 $transition-speed: 1.3s;
 
 // Dynamic Variables
-$width: (100/$menu-items) * 1%; // makes each item the right size
+$width: (70/$menu-items) * 1%; // makes each item the right size
 $menu-items-loop-offset: $menu-items - 1; // the number of items in the menu
 
 
@@ -25,11 +25,11 @@ $menu-items-loop-offset: $menu-items - 1; // the number of items in the menu
   margin: 50px auto;
   max-width: 720px; // As all measurements are using % this could be a flexible value.
   padding: 0;
-  width: 100%;
+  width: 70%;
 }
 
 .Nav-item {
-  background: #fff;
+  background: $background-color;
   display: block;
   float: left;
   margin: 0;
@@ -38,11 +38,11 @@ $menu-items-loop-offset: $menu-items - 1; // the number of items in the menu
   text-align: center;
 
   &:first-child {
-    border-radius: 3px 0 0 3px;
+    border-radius: 0 0 0 0;
   }
 
   &:last-child {
-    border-radius: 0 3px 3px 0;
+    border-radius: 0 0 0 0;
   }
 
   &.is-active a {
@@ -50,7 +50,7 @@ $menu-items-loop-offset: $menu-items - 1; // the number of items in the menu
   }
 
   a {
-    color: $background-color;
+    color: #fff;
     display: block;
     padding-top: 20px;
     padding-bottom: 20px;
@@ -90,14 +90,14 @@ $menu-items-loop-offset: $menu-items - 1; // the number of items in the menu
         width: 0;
         height: 0;
         top: 0;
-        left: ($width/2);
+        left: ($width/2) + 30;
         margin-left: -3px;
       }
       &:after {
         background: $indicator-color;
         top: -6px;
         bottom: -6px;
-        left: 0;
+        left: 0 + 30;
         width: $width;
         z-index: -1;
       }
@@ -110,11 +110,11 @@ $menu-items-loop-offset: $menu-items - 1; // the number of items in the menu
   @for $i from 1 through $menu-items-loop-offset {
     // when the Nav item "is active", make the indicator line up with the navigation item.
     .Nav-item:nth-child(#{$i}).is-active ~ .Nav-item:last-child:after {
-      left:($width*$i)-$width;
+      left:($width*$i)-$width + 30;
     }
     .Nav-item:nth-child(#{$i}).is-active ~ .Nav-item:last-child:before
     {
-      left:($width*$i)+($width/2)-$width; // this ensures the triangle lines up to the menu.
+      left:($width*$i)+($width/2)-$width + 30; // this ensures the triangle lines up to the menu.
     }
 }
 
@@ -126,11 +126,11 @@ $menu-items-loop-offset: $menu-items - 1; // the number of items in the menu
     @for $i from 1 through $menu-items-loop-offset {
     // We have to use !important to make the hovers overide if the last:child is the active or hovered
     .Nav-item:nth-child(#{$i}):hover ~ .Nav-item:last-child:after {
-      left:($width*$i)-$width !important;
+      left:($width*$i)-$width + 30 !important;
     }
 
     .Nav-item:nth-child(#{$i}):hover ~ .Nav-item:last-child:before{
-      left:($width*$i)+($width/2)-$width !important;
+      left:($width*$i)+($width/2)-$width + 30 !important;
     }
 
   }
@@ -142,10 +142,10 @@ $menu-items-loop-offset: $menu-items - 1; // the number of items in the menu
           &:hover, &.is-active {
             &:before {
              // we have to use important because the sibling selctor is more specific.
-              left: (100%-$width)+($width/2) !important;
+              left: (70%-$width)+($width/2) + 30 !important;
             }
             &:after{
-              left: 100%-$width !important;
+              left: 70%-$width + 30 !important;
             }
           }
         }
@@ -174,14 +174,8 @@ $menu-items-loop-offset: $menu-items - 1; // the number of items in the menu
 
 // Presentation Styling
 
-html {
-  background-color: $background-color;
-  font-family: 'Open Sans', sans-serif;
-  font-weight: 800;
-}
-
 .toggle {
-    color: #fff;
+    color: $background-color;
     font-family: sans-serif;
     text-align: center;
 }
