changed login functions

--- a/css/homepageStyle.css
+++ b/css/homepageStyle.css
@@ -119,9 +119,9 @@ body {
 }
 
 .titleHolder {
-	margin-top: 15px;
-	margin-left: 15px;
-	margin-bottom: 7px;
+	margin-top: 3%;
+	margin-left: 2%;
+	margin-bottom: 2.7%;
 	text-align: center;
 	min-width: 200px;
 }
