--- a/css/slidingNav.css
+++ b/css/slidingNav.css
@@ -13,7 +13,7 @@
   float: left;
   margin: 0;
   padding: 0;
-  width: 17.5%;
+  width: 23.3333333333%;
   text-align: center;
 }
 .Nav-item:first-child {
@@ -53,7 +53,7 @@
   width: 0;
   height: 0;
   top: 0;
-  left: 38.75%;
+  left: 41.6666666667%;
   margin-left: -3px;
 }
 .with-indicator .Nav-item:last-child:after {
@@ -61,50 +61,38 @@
   top: -6px;
   bottom: -6px;
   left: 30;
-  width: 17.5%;
+  width: 23.3333333333%;
   z-index: -1;
 }
 .with-indicator .Nav-item:nth-child(1).is-active ~ .Nav-item:last-child:after {
   left: 30%;
 }
 .with-indicator .Nav-item:nth-child(1).is-active ~ .Nav-item:last-child:before {
-  left: 38.75%;
+  left: 41.6666666667%;
 }
 .with-indicator .Nav-item:nth-child(2).is-active ~ .Nav-item:last-child:after {
-  left: 47.5%;
+  left: 53.3333333333%;
 }
 .with-indicator .Nav-item:nth-child(2).is-active ~ .Nav-item:last-child:before {
-  left: 56.25%;
-}
-.with-indicator .Nav-item:nth-child(3).is-active ~ .Nav-item:last-child:after {
   left: 65%;
-}
-.with-indicator .Nav-item:nth-child(3).is-active ~ .Nav-item:last-child:before {
-  left: 73.75%;
 }
 .with-indicator .Nav-item:nth-child(1):hover ~ .Nav-item:last-child:after {
   left: 30% !important;
 }
 .with-indicator .Nav-item:nth-child(1):hover ~ .Nav-item:last-child:before {
-  left: 38.75% !important;
+  left: 41.6666666667% !important;
 }
 .with-indicator .Nav-item:nth-child(2):hover ~ .Nav-item:last-child:after {
-  left: 47.5% !important;
+  left: 53.3333333333% !important;
 }
 .with-indicator .Nav-item:nth-child(2):hover ~ .Nav-item:last-child:before {
-  left: 56.25% !important;
-}
-.with-indicator .Nav-item:nth-child(3):hover ~ .Nav-item:last-child:after {
   left: 65% !important;
 }
-.with-indicator .Nav-item:nth-child(3):hover ~ .Nav-item:last-child:before {
-  left: 73.75% !important;
-}
 .with-indicator .Nav-item:last-child:hover:before, .with-indicator .Nav-item:last-child.is-active:before {
-  left: 91.25% !important;
+  left: 88.3333333333% !important;
 }
 .with-indicator .Nav-item:last-child:hover:after, .with-indicator .Nav-item:last-child.is-active:after {
-  left: 82.5% !important;
+  left: 76.6666666667% !important;
 }
 
 *, *:before, *:after {
