worked on load function

--- a/css/gameStyle.css
+++ b/css/gameStyle.css
@@ -38,11 +38,11 @@ section{
 	background: linear-gradient(white, grey); /* Standard syntax */
 }
 
-#instructions{
+#stats{
 	float: right;
 }
 
-#stats{
+#profile{
 	float: left;
 }
 
