kept working on profile page

--- a/css/homepageStyle.css
+++ b/css/homepageStyle.css
@@ -180,8 +180,12 @@ body {
 	height: 50%;
 }
 
-.d1-a1 {
+.saves tr td {
+	background-color: violet;
+}
 
+.saves tr {
+	background-color: white;
 }
 
 
